; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_debugfs_netdev.c_add_common_files.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_debugfs_netdev.c_add_common_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_sub_if_data = type { i32 }

@drop_unencrypted = common dso_local global i32 0, align 4
@rc_rateidx_mask_2ghz = common dso_local global i32 0, align 4
@rc_rateidx_mask_5ghz = common dso_local global i32 0, align 4
@rc_rateidx_mcs_mask_2ghz = common dso_local global i32 0, align 4
@rc_rateidx_mcs_mask_5ghz = common dso_local global i32 0, align 4
@hw_queues = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_sub_if_data*)* @add_common_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_common_files(%struct.ieee80211_sub_if_data* %0) #0 {
  %2 = alloca %struct.ieee80211_sub_if_data*, align 8
  store %struct.ieee80211_sub_if_data* %0, %struct.ieee80211_sub_if_data** %2, align 8
  %3 = load i32, i32* @drop_unencrypted, align 4
  %4 = call i32 @DEBUGFS_ADD(i32 %3)
  %5 = load i32, i32* @rc_rateidx_mask_2ghz, align 4
  %6 = call i32 @DEBUGFS_ADD(i32 %5)
  %7 = load i32, i32* @rc_rateidx_mask_5ghz, align 4
  %8 = call i32 @DEBUGFS_ADD(i32 %7)
  %9 = load i32, i32* @rc_rateidx_mcs_mask_2ghz, align 4
  %10 = call i32 @DEBUGFS_ADD(i32 %9)
  %11 = load i32, i32* @rc_rateidx_mcs_mask_5ghz, align 4
  %12 = call i32 @DEBUGFS_ADD(i32 %11)
  %13 = load i32, i32* @hw_queues, align 4
  %14 = call i32 @DEBUGFS_ADD(i32 %13)
  ret void
}

declare dso_local i32 @DEBUGFS_ADD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
